--- a/index.html
+++ b/index.html
@@ -199,13 +199,15 @@
           </div>
           <div class="flex-child">
             <h4>04</h4>
-            <h5>Audio</h5>
+            <h5>Web Development</h5>
             <p class="special-card-p">
-              More of 10 years experience in audio-design especially for
-              e-learning modules Lorem ipsum dolor sit, amet consectetur
-              adipisicing elit. Aperiam ab impedit quia sunt praesentium?
-              Temporibus consequuntur mollitia, eum ea, molestias dolorem iste,
-              voluptatum aliquam illo dolore et dicta distinctio atque.
+              Aperiam ab impedit quia sunt praesentium? Temporibus consequuntur
+              mollitia, eum ea, molestias dolorem iste, voluptatum aliquam illo
+              dolore et dicta distinctio atque. ipsum dolor sit, amet
+              consectetur adipisicing elit. Aperiam ab impedit quia sunt
+              praesentium? Temporibus consequuntur mollitia, eum ea, molestias
+              dolorem iste, voluptatum aliquam illo dolore et dicta distinctio
+              atque.
             </p>
           </div>
         </div>
